--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "Srt-Lnk",
+  "name": "Notes",
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "test": "meteor test --driver-package=cultofcoders:mocha",
-    "test-app": "TEST_WATCH=1 meteor test --full-app --driver-package meteortesting:mocha",
-    "visualize": "meteor --production --extra-packages bundle-visualizer"
+    "test": "meteor test --driver-package=cultofcoders:mocha"
   },
   "dependencies": {
     "@babel/runtime": "^7.1.5",
