--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "bcrypt": "^3.0.5",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-s-alert": "^1.4.1",
@@ -24,9 +24,12 @@
     }
   },
   "devDependencies": {
+    "enzyme": "^2.7.1",
     "eslint": "^5.15.1",
     "eslint-plugin-react": "^7.12.4",
-    "expect": "^1.20.2"
+    "expect": "^1.20.2",
+    "react-addons-test-utils": "^15.4.1",
+    "react-test-renderer": "^15.4.1"
   },
   "engines": {
     "node": "8.11.4"
