--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "react": "^15.4.1",
+    "react-addons-pure-render-mixin": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
